# Sample-Django-API

./: .dockerignore  .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override-example.yml  docker-compose.yml  manage.py  pyproject.toml
src/accounts/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
src/main/: asgi.py  settings.py  urls.py  wsgi.py
src/survey/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
survey-frontend/: package-lock.json  package.json
survey-frontend/src/: App.jsx  api.js  axios.js
survey-frontend/src/pages/: Login.jsx  Quiz.jsx  Register.jsx  Summary.jsx
